# enterprise-ai-workflow-orchestrator

./: .env.example  .gitignore  CLAUDE.md  README.md  guide_lines_ai_engineering.md  pyproject.toml
docs/: pipeline-workflow.md
evals/: __init__.py  runner.py  test_cases.json
src/: __init__.py  config.py  main.py
src/approval/: __init__.py  gate.py
src/guardrails/: __init__.py  validators.py
src/models/: __init__.py  schemas.py
src/observability/: __init__.py  logger.py
src/prompts/: __init__.py  registry.py
src/prompts/templates/: classify_v1.txt  extract_v1.txt
src/providers/: base.py  claude.py  openai_provider.py
src/rag/: __init__.py  store.py
src/rag/policies/: compliance_requirements.md  payment_policy.md  vendor_onboarding.md
src/tools/: compliance.py  registry.py  workflow.py
